public/css/main.css
/* TODO
    - wtf margin?
*/

header {
    background-color: indianred;
    height: 4em;
    overflow-y: hidden;
}
body {
    background-color: lightgray;
    height: 100%;
}
.title {
    color: darkslategray;
    margin: 0;
    padding: 0.4em 0;
    display:inline-block;

}
header .menuButton {
    height: 1em;
    width: 1em;
    margin: 0 1em;
    background-color: darkslategray;
    display: inline-block;
}

.ideaBox {
    overflow-y: auto;
}

.idea {
    background-color: white;
    margin: 1.25em 0.5em 0.5em;
/*    margin-top: ;*/
    padding: 1em 1em 0;
}

.idea:first-of-type {
    margin-top: 0.5em;
/*    margin-bottom: 0;*/
}
.ideaLogo {
    width: 2em; height: 2em;
    float: left;
    background-color: cadetblue;
    background-image: url(http://lorempixel.com/100/100/abstract);
    margin-right: 0.5em;
    border-radius: 100%;
}
.ideaTitle {
    margin: 0;
}
.ideaDescription {
    margin: 0;
}
.voter {
    float: right;
    background-color: cadetblue;
    height: 2em; width: 2em;
    margin: 0;
    border-radius: 100%;
}



.readMore {
    color: white;
    background-color: darkslategray;
    font-size: 0.75em;
    position: relative; bottom: -1em;
    display: block;
    margin: -0.5em auto 0;

}

